--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
               <img src="assets/images/home/onseat.jpeg" alt="">
             </div>
             <div class="detail-box">
-              <h5>{{ "home.takeway" | translate }}</h5>
+              <h5>{{ "home.takeaway" | translate }}</h5>
               <h6><span></span></h6>
               <a>{{ "home.book" | translate }}</a>
             </div>
