--- a/src/app/pages/menu/product-list/product-list.component.html
+++ b/src/app/pages/menu/product-list/product-list.component.html
@@ -1,33 +1,33 @@
-    <section class="food_section layout_padding-bottom">
-      <div class="container">
-      <div class="filters-content" >
-        <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all pizza" *ngFor="let product of products$ | async">
-            <div class="box" >
-              <div>
-                <div class="img-box">
-                  <img src="https://static.750g.com/images/600-600/fa94d52dd749d587b7fd75e4a918174b/pizza.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    {{product.libelle}}
-                  </h5>
-                  <p>
-                    {{product.description}}
-                  </p>
-                  <div class="options">
-                    <h6>
-                      {{product.price}}
-                    </h6>
-                    <button (click)="openProductSelectionDialog(product)">
+<section class="food_section layout_padding-bottom">
+    <div class="container">
+        <div class="filters-content">
+            <div class="row grid">
+                <div class="col-sm-6 col-lg-4 all pizza" *ngFor="let product of products$ | async">
+                    <div class="box">
+                        <div>
+                            <div class="img-box">
+                                <img src="https://static.750g.com/images/600-600/fa94d52dd749d587b7fd75e4a918174b/pizza.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <h5>
+                                    {{product.libelle}}
+                                </h5>
+                                <p>
+                                    {{product.description}}
+                                </p>
+                                <div class="options">
+                                    <h6>
+                                        {{product.price}}
+                                    </h6>
+                                    <button (click)="selectionProcess(product)">
                       <i class="fa-solid fa-cart-shopping" aria-hidden="true"></i>
                     </button>
-                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
-      </div>
-    </section>
+    </div>
+</section>
