--- a/src/app/pages/Shared/checkout/checkout.component.html
+++ b/src/app/pages/Shared/checkout/checkout.component.html
@@ -1,1 +1,3 @@
-<p>checkout works!</p>
+<div class="jumbotron text-center">
+  <button (click)="onCheckout()" routerLink="/join" class="btn btn-primary p-3">Payer</button>
+</div>
